<resources>
    <string name="app_name">Prouds</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="register">Don\'t have an account?</string>

    <string name="tb_myassignment">MY ASSIGNMENT</string>
    <string name="tb_myperformance">MY PERFORMANCE</string>
    <string name="tb_notification">NOTIFICATION</string>
    <string name="tb_timesheet">TIMESHEET</string>
    <string name="tb_projectdetails">PROJECT DETAILS</string>
    <string name="tb_addts">ADD TIMESHEET</string>

    <string name="tab_perform_act">My Activity</string>
    <string name="tab_perform_performance">Performance</string>

    <string name="search_home">Search business unit…</string>
    <string name="search_assignment">Search project…</string>
    <string name="search_recents">RECENTS</string>
    <string name="search_result">SEARCH RESULT</string>

    <string name="ad_start">START DATE</string>
    <string name="ad_end">END DATE</string>

    <!-- overview fragment -->
    <string name="ov_projectdetail">Project Detail</string>
    <string name="ov_iwo">IWO (Internal Work Order)</string>
    <string name="ov_buo">Business Unit Owner</string>
    <string name="ov_desc">Description</string>
    <string name="ov_more">MORE</string>
    <string name="ov_workplan">Workplan Status</string>
    <string name="ov_completed">Completed task</string>
    <string name="ov_inprogress">In Progress task</string>
    <string name="ov_notstarted">Not Started task</string>
    <string name="ov_ondue">On Due task</string>
    <string name="ov_overdue">Over Due task</string>
    <string name="ov_perform">Project Performance Status</string>
    <string name="ov_ev">EV</string>
    <string name="ov_pv">PV</string>
    <string name="ov_ac">AC</string>
    <string name="ov_spi">SPI</string>
    <string name="ov_cpi">CPI</string>

    <string name="drawer_overview">Overview</string>
    <string name="drawer_workplan">Workplan</string>
    <string name="drawer_activity">Activity</string>
    <string name="drawer_issues">Issues</string>
    <string name="drawer_doc">Docs &amp; Files</string>
    <string name="drawer_team">Team Member</string>
    <string name="drawer_setting">Project Setting</string>

    <string name="wp_monitoring">Monitoring</string>
    <string name="wp_physical_checklist">Physical Checklist</string>
    <string name="wp_seeall">SEE ALL</string>
    <string name="wp_duration">DURATION</string>
    <string name="wp_work">WORK</string>

    <string name="issues_report">REPORT AN ISSUE</string>
    <string name="issues">#Issue</string>
    <string name="issues_reporter">reported by</string>
    <string name="issues_resolved">resolved</string>
    <string name="issues_not_resolved">not_resolved</string>

    <string name="doc_upload">UPLOAD DOCUMENT</string>
    <string name="doc_uploader">uploaded by</string>
    <string name="doc_date">at</string>

    <string name="act_project">Project</string>
    <string name="act_via">via</string>
    <string name="act_errormsg1">Left a</string>
    <string name="act_errormsg2">Distribution Error</string>
    <string name="act_errormsg3">message</string>
    <string name="act_deny">DENY</string>
    <string name="act_approve">APPROVED</string>
    <string name="act_denied">DENIED</string>

    <string name="set_iwo">IWO</string>
    <string name="set_projectid">Project ID</string>
    <string name="set_project_name">Project Name</string>
    <string name="set_business_unit">Business Unit</string>
    <string name="set_related_business">Related Business Unit</string>
    <string name="set_customer">Customer</string>
    <string name="set_end_customer">End Customer</string>
    <string name="set_project_val">Project Value</string>
    <string name="set_margin">Margin</string>
    <string name="set_product">PRODUCT</string>
    <string name="set_desc">Description</string>
    <string name="set_project_type">Project Type</string>
    <string name="set_project">Project</string>
    <string name="set_non_project">Non Project</string>
    <string name="set_HO">H/O Operation</string>
    <string name="set_yes">Yes</string>
    <string name="set_no">No</string>
    <string name="set_pm">Project Manager</string>
    <string name="set_acc_manager">Account Manager</string>
    <string name="set_type_effort">Type of Effort</string>
    <string name="set_product_type">Product Type</string>
    <string name="set_status">STATUS</string>
    <string name="set_project_status">Project Status</string>
    <string name="set_start">Start Date</string>
    <string name="set_end">End Date</string>
    <string name="set_visibility">Visibility</string>
    <string name="set_own_business">Owning Business Member (Default)</string>
    <string name="set_project_member">Project Member Only</string>
    <string name="set_finance">FINANCE</string>
    <string name="set_cap_expense">Capital Expense</string>
    <string name="set_project_overhead">Project Overhead</string>
    <string name="set_actual_cost">Actual Cost Workplan</string>
    <string name="set_cogs">COGS</string>
    <string name="set_save">SAVE</string>

    <string name="ts_add">ADD TIMESHEET</string>
    <string name="ts_submitted">Submitted</string>
    <string name="ts_hours">hours</string>
    <string name="ts_for">for</string>
    <string name="ts_appos">\"</string>
    <string name="ts_in">in</string>
    <string name="ts_errormsg">Left a Distribution Error Message</string>
    <string name="ts_resubmit">RE-SUBMIT</string>
    <string name="ts_choose_date">CHOOSE DATE</string>
    <string name="ts_denied">Denied</string>
    <string name="ts_approved">Approved</string>
    <string name="ts_wait">Waiting for Approval...</string>

    <string name="addts_choose_project">Choose a project</string>
    <string name="addts_choose_task">Choose a task</string>
    <string name="addts_work_hours">Work Hours</string>
    <string name="addts_subject">Subject</string>
    <string name="addts_message">Message</string>
    <string name="addts_new">ADD NEW</string>

    <string name="profset_basic">BASIC INFO</string>
    <string name="profset_uid">User ID</string>
    <string name="profset_role">Role</string>
    <string name="profset_name">Full Name</string>
    <string name="profset_email">Email Address</string>
    <string name="profset_phone">Phone Number</string>
    <string name="profset_address">Address</string>
    <string name="profset_pwd">Password</string>
    <string name="profset_old_pwd">Old Password</string>
    <string name="profset_new_pwd">New Password</string>
    <string name="profset_conf_pwd">Confirm Password</string>
    <string name="profset_save">SAVE CHANGES</string>
    <string name="profset_logout">LOGOUT</string>

    <string name="chart_ts">TIMESHEET</string>
    <string name="chart_util">UTILIZATION</string>
    <string name="chart_entry">USER ENTRY</string>

    <string name="issue_subject">Subject</string>
    <string name="issue_message">Message</string>
    <string name="issue_priority">Choose a Priority</string>
    <string name="issue_upload">Upload file</string>
    <string name="issue_report">REPORT ISSUE</string>

    <string name="dayoff_enjoy">Enjoy Your Day-off !</string>
    <string name="dayoff_update">You don\'t have to update anything today</string>

    <string name="assign_details_due">Due soon</string>
    
    <string name="select_picture">select picture</string>

</resources>
