<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sigma.prouds.FormReportIssueActivity">

    <!-- Toolbar start -->
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tb_add_timesheet"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/header"
        android:paddingRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/tv_title_toolbar_report_issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/issue_report"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <!-- Toolbar end -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_addts"
        android:layout_below="@+id/tb_add_timesheet"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_issue_subject"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/white_box"
            android:hint="@string/issue_subject"
            android:paddingLeft="16dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_issue_msg"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/white_box"
            android:gravity="top"
            android:hint="@string/addts_message"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/et_issue_priority"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/white_box"
                    android:hint="@string/issue_priority"
                    android:paddingLeft="16dp"
                    android:paddingRight="40dp"
                    android:textSize="14sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_margin="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/dropdown"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/et_issue_upload"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/white_box"
                    android:hint="@string/issue_upload"
                    android:paddingLeft="16dp"
                    android:paddingRight="40dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="14sp" />
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_margin="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/upload"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_report_issue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/issue_report"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</RelativeLayout>
